# telepathy-lwqq

./: CMakeLists.txt  LICENSE  README.md  config.h.in
src/: .clang_complete  CMakeLists.txt  aliasing.c  aliasing.h  avatar.c  avatar.h  captcha.c  captcha.h  channel-manager.c  channel-manager.h  channel.c  channel.h  connection-manager.c  connection-manager.h  connection.c  connection.h  contact-list.c  contact-list.h  defines.h  handles.c  handles.h  im-manager.c  im-manager.h  main.c  presence.c  presence.h  protocol.c  protocol.h
